force-app/main/default/objects/Asset/fields/Charger_ID__c.field-meta.xml
<CustomField>
    <fullName>Charger_ID__c</fullName>
    <externalId>true</externalId>
    <label>Charger ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>