force-app/main/default/objects/Asset/fields/Charging_Site__c.field-meta.xml
<CustomField>
    <fullName>Charging_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Charging Site</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a charging site belonging to the asset&apos;s account.</errorMessage>
        <filterItems>
            <field>Charging_Site__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Charging_Site__c</referenceTo>
    <relationshipLabel>Charging Stations</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>