force-app/main/default/objects/Asset/validationRules/VE_Charging_Station_Required_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Charging_Station_Required_Data</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Charging_Station&quot;,
    OR(
        ISBLANK(AccountId),
        ISBLANK(Product2Id),
        ISBLANK(SerialNumber),
        ISBLANK(Charging_Site__c),
        ISBLANK(Charger_ID__c),
        ISBLANK(Quantity),
        Quantity &lt;&gt; 1
    )
)</errorConditionFormula>
    <errorMessage>For a charging station, complete Account, Product, Serial Number, Charging Site and Charger ID, and set Quantity to 1.</errorMessage>
</ValidationRule>